// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News ticker Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-news-ticker"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#euro"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et finibus mi. Sed hendrerit velit id ex ornare interdum. Duis suscipit tortor vitae mi feugiat suscipit. Morbi consequat tortor magna, ac malesuada nunc placerat non. Vivamus pulvinar augue tristique lectus lobortis iaculis.
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#global"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-news-ticker__slide-text"
              href="/example"
            >
              <svg
                aria-hidden="false"
                class="ecl-icon ecl-icon--2xs ecl-link__icon"
                focusable="false"
                role="img"
              >
                <title>
                  Link to an external domain
                </title>
                <use
                  xlink:href="/icons.svg#external"
                />
              </svg>
              <span
                class="ecl-link__label"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et finibus mi. Sed hendrerit velit id ex ornare interdum. Duis suscipit tortor vitae mi feugiat suscipit. Morbi consequat tortor magna, ac malesuada nunc placerat non. Vivamus pulvinar augue tristique lectus lobortis iaculis. Nam condimentum aliquam sem, a bibendum mauris faucibus id. In euismod semper ex et tincidunt. Donec eu augue posuere, feugiat enim ac, faucibus tortor.
              </span>
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <img
              alt="Alternative text for the image"
              class="ecl-news-ticker__icon"
              src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
              title="title of the image"
            />
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#information-outline"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#livestreaming"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#euro"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <div
        class="ecl-news-ticker__actions"
      >
        <button
          class="ecl-button ecl-button--tertiary ecl-news-ticker__prev ecl-button--icon-only"
          data-ecl-news-ticker-prev=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Previous item
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-icon--rotate-270 ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-news-ticker__play ecl-button--icon-only"
          data-ecl-news-ticker-play=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Play news ticker
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#play-outline"
              />
            </svg>
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-news-ticker__pause ecl-button--icon-only"
          data-ecl-news-ticker-pause=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Pause news ticker
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#pause-outline"
              />
            </svg>
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-news-ticker__next ecl-button--icon-only"
          data-ecl-news-ticker-next=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Next item
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-icon--rotate-90 ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="ecl-news-ticker__counter"
      >
        <span
          class="ecl-news-ticker__counter--current"
        >
          1
        </span>
         of 
        <span
          class="ecl-news-ticker__counter--max"
        >
          6
        </span>
      </div>
    </div>
  </div>
</jest>
`;

exports[`News ticker Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-news-ticker"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#euro"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et finibus mi. Sed hendrerit velit id ex ornare interdum. Duis suscipit tortor vitae mi feugiat suscipit. Morbi consequat tortor magna, ac malesuada nunc placerat non. Vivamus pulvinar augue tristique lectus lobortis iaculis.
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#global"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-news-ticker__slide-text"
              href="/example"
            >
              <svg
                aria-hidden="false"
                class="ecl-icon ecl-icon--2xs ecl-link__icon"
                focusable="false"
                role="img"
              >
                <title>
                  Link to an external domain
                </title>
                <use
                  xlink:href="/icons.svg#external"
                />
              </svg>
              <span
                class="ecl-link__label"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et finibus mi. Sed hendrerit velit id ex ornare interdum. Duis suscipit tortor vitae mi feugiat suscipit. Morbi consequat tortor magna, ac malesuada nunc placerat non. Vivamus pulvinar augue tristique lectus lobortis iaculis. Nam condimentum aliquam sem, a bibendum mauris faucibus id. In euismod semper ex et tincidunt. Donec eu augue posuere, feugiat enim ac, faucibus tortor.
              </span>
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <img
              alt="Alternative text for the image"
              class="ecl-news-ticker__icon"
              src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
              title="title of the image"
            />
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#information-outline"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#livestreaming"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#euro"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <div
        class="ecl-news-ticker__actions"
      >
        <button
          class="ecl-button ecl-button--tertiary ecl-news-ticker__prev ecl-button--icon-only"
          data-ecl-news-ticker-prev=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Previous item
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-icon--rotate-270 ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-news-ticker__play ecl-button--icon-only"
          data-ecl-news-ticker-play=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Play news ticker
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#play-outline"
              />
            </svg>
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-news-ticker__pause ecl-button--icon-only"
          data-ecl-news-ticker-pause=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Pause news ticker
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#pause-outline"
              />
            </svg>
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-news-ticker__next ecl-button--icon-only"
          data-ecl-news-ticker-next=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Next item
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-icon--rotate-90 ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="ecl-news-ticker__counter"
      >
        <span
          class="ecl-news-ticker__counter--current"
        >
          1
        </span>
         of 
        <span
          class="ecl-news-ticker__counter--max"
        >
          6
        </span>
      </div>
    </div>
  </div>
</jest>
`;

exports[`News ticker Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-news-ticker custom-class custom-class--test"
    data-ecl-auto-init="NewsTicker"
    data-ecl-news-ticker="true"
  >
    <div
      class="ecl-news-ticker__container"
    >
      <div
        class="ecl-news-ticker__content"
      >
        <ul
          class="ecl-news-ticker__slides"
          id="news-ticker-example-content"
        >
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#euro"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et finibus mi. Sed hendrerit velit id ex ornare interdum. Duis suscipit tortor vitae mi feugiat suscipit. Morbi consequat tortor magna, ac malesuada nunc placerat non. Vivamus pulvinar augue tristique lectus lobortis iaculis.
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#global"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-news-ticker__slide-text"
              href="/example"
            >
              <svg
                aria-hidden="false"
                class="ecl-icon ecl-icon--2xs ecl-link__icon"
                focusable="false"
                role="img"
              >
                <title>
                  Link to an external domain
                </title>
                <use
                  xlink:href="/icons.svg#external"
                />
              </svg>
              <span
                class="ecl-link__label"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et finibus mi. Sed hendrerit velit id ex ornare interdum. Duis suscipit tortor vitae mi feugiat suscipit. Morbi consequat tortor magna, ac malesuada nunc placerat non. Vivamus pulvinar augue tristique lectus lobortis iaculis. Nam condimentum aliquam sem, a bibendum mauris faucibus id. In euismod semper ex et tincidunt. Donec eu augue posuere, feugiat enim ac, faucibus tortor.
              </span>
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <img
              alt="Alternative text for the image"
              class="ecl-news-ticker__icon"
              src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image4.jpg"
              title="title of the image"
            />
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#information-outline"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Excepteur sint occaecat cupidatat officia deserunt mollit anim id est laborum
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#livestreaming"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
            </a>
          </li>
          <li
            class="ecl-news-ticker__slide"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-news-ticker__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#euro"
              />
            </svg>
            <a
              class="ecl-link ecl-link--standalone ecl-news-ticker__slide-text"
              href="/example"
            >
              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit sed quia consequuntur magni dolores
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ecl-news-ticker__controls"
    >
      <div
        class="ecl-news-ticker__actions"
      >
        <button
          class="ecl-button ecl-button--tertiary ecl-news-ticker__prev ecl-button--icon-only"
          data-ecl-news-ticker-prev=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Previous item
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-icon--rotate-270 ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-news-ticker__play ecl-button--icon-only"
          data-ecl-news-ticker-play=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Play news ticker
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#play-outline"
              />
            </svg>
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-news-ticker__pause ecl-button--icon-only"
          data-ecl-news-ticker-pause=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Pause news ticker
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#pause-outline"
              />
            </svg>
          </span>
        </button>
        <button
          class="ecl-button ecl-button--tertiary ecl-news-ticker__next ecl-button--icon-only"
          data-ecl-news-ticker-next=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Next item
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--l ecl-icon--rotate-90 ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#corner-arrow"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="ecl-news-ticker__counter"
      >
        <span
          class="ecl-news-ticker__counter--current"
        >
          1
        </span>
         of 
        <span
          class="ecl-news-ticker__counter--max"
        >
          6
        </span>
      </div>
    </div>
  </div>
</jest>
`;
